--- a/app/globals.css
+++ b/app/globals.css
@@ -1,19 +1,19 @@
-@import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700&family=Poppins:wght@400;700&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700&family=Poppins:wght@400;700&display=swap");
 
 * {
   box-sizing: border-box;
 }
 
 html {
-  font-family: 'Open Sans', sans-serif;
+  font-family: "Open Sans", sans-serif;
   height: 100%;
 }
 
 body {
   height: 100%;
   margin: 0;
-  background: linear-gradient(180deg, #232029, #231e2d);
-  color: #ddd8e4;
+  background: linear-gradient(180deg, #eeedf1, #edecef);
+  color: #020004;
 }
 
 main {
@@ -22,8 +22,8 @@ main {
 }
 
 main img {
-  width: 8rem;
-  height: 8rem;
+  width: 30rem;
+  height: 10rem;
   object-fit: cover;
   filter: drop-shadow(0 0 4px #f6c363);
 }
@@ -31,8 +31,8 @@ main img {
 h1 {
   font-size: 3rem;
   margin: 3rem auto;
-  color: #ede9f3;
-  font-family: 'Poppins', sans-serif;
+  color: #000000;
+  font-family: "Poppins", sans-serif;
 }
 
 p {
